# MONITORIA_SISTEMAS_DISTRIBUIDOS

./: BUILD.md  CMakeLists.txt  Dockerfile  INSTALL_DEPS.sh  README.md  docker-compose.yml
atividades/: CMakeLists.txt
atividades/sockets_locais_threads/: BUILD.md  CMakeLists.txt  Dockerfile  README.md  client.c  server.c  server.h
semana_2/: CMakeLists.txt
semana_2/DFS/: CMakeLists.txt  README.md  client.c  file_system.c  file_system.h  server.c
semana_2/processos/: CMakeLists.txt  README.md  create_process.c  process_states.c
semana_2/threads/: CMakeLists.txt  README.md  deadlock.c  deadlock_resolved.c  multithread.c  mutex_correct.c  mutex_wrong.c  thread_simples.c
semana_3/: CMakeLists.txt
semana_3/SYNC_ASYNC/: CMakeLists.txt  async_srv.c  sync_srv.c
semana_3/TCP/: CMakeLists.txt  tcp_client.c  tcp_srv.c
semana_3/UDP/: CMakeLists.txt  udp_client.c  udp_server.c
semana_4/: CMakeLists.txt
semana_4/HTTP/: CMakeLists.txt  http_client.c  http_server.c
semana_4/HTTPS/: CMakeLists.txt  https_client.c
semana_9/reverse_proxy_simple_example/: Dockerfile.html  Dockerfile.nginx  README.md  docker-compose.yaml  index.html  nginx.conf
